// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should be work with content 1`] = `
"<div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><span class=\\"nextui-input-content\\"><span>test-icon</span><style>
        .nextui-input-content {
          box-sizing: content-box;
          display: flex;
          width: calc(2 * var(--nextui-spacing-lg) * .42);
          height: 100%;
          align-items: center;
          vertical-align: center;
          margin: 0;
          padding: 0 calc(2 * var(--nextui-spacing-lg) * .3);
          color: var(--nextui-color-text);
          line-height: 1;
          position: relative;
          cursor: default;
          pointer-events: none;
        }
      </style></span><input type=\\"text\\" id=\\"nextui-input-rib73iqh\\" class=\\"nextui-input nextui-input-left-content\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-foreground);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: var(--nextui-color-text);
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-foreground);
            box-shadow: 0 0 0 0px
              var(--nextui-color-foreground);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-0bktjtbg\\" class=\\"nextui-input nextui-input-nextui-input-right-content\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"><span class=\\"nextui-input-content\\"><span>test-icon</span><style>
        .nextui-input-content {
          box-sizing: content-box;
          display: flex;
          width: calc(2 * var(--nextui-spacing-lg) * .42);
          height: 100%;
          align-items: center;
          vertical-align: center;
          margin: 0;
          padding: 0 calc(2 * var(--nextui-spacing-lg) * .3);
          color: var(--nextui-color-text);
          line-height: 1;
          position: relative;
          cursor: default;
          pointer-events: none;
        }
      </style></span></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-foreground);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: var(--nextui-color-text);
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-foreground);
            box-shadow: 0 0 0 0px
              var(--nextui-color-foreground);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div></div>"
`;

exports[`Input should be work with label 1`] = `
"<div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><label id=\\"nextui-input-label-v89an15r\\" class=\\"next-input-block-label\\" for=\\"nextui-input-v89an15r\\">label<style>
        .next-input-block-label {
          display: block;
          font-weight: normal;
          color: var(--nextui-color-foreground);
          padding: 0 0 0 4px;
          margin-bottom: calc(var(--nextui-spacing-sm) * 0.5);
          font-size: .875rem;
          line-height: 1.5;
          -webkit-touch-callout: none; /* iOS Safari */
          -webkit-user-select: none; /* Safari */
          -khtml-user-select: none; /* Konqueror HTML */
          -moz-user-select: none; /* Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
          user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
        }
        .next-input-block-label > :global(*:first-child) {
          margin-top: 0;
        }
        .next-input-block-label > :global(*:last-child) {
          margin-bottom: 0;
        }
        .next-input-block-label.next-input-block-label-rounded {
          padding: 0 0 0 calc(var(--nextui-spacing-sm) * 0.5);
        }
        .next-input-block-label-as-placeholder {
          position: absolute;
          padding: 0;
          z-index: 1;
          left: 12px;
          top: 20%;
          margin-bottom: 0;
          cursor: text;
          transition: left 0.25s ease 0s, color 0.25s ease 0s, top 0.25s ease 0s;
          color: var(--nextui-color-accents-3);
        }
        .next-input-block-label-as-placeholder.next-input-block-label-underlined {
          left: 4px;
        }
        .next-input-block-label-as-placeholder.next-input-block-label-has-content-left {
          left: calc(12px + 2 * var(--nextui-spacing-lg) * 0.64);
        }
        .next-input-block-label-as-placeholder.next-input-block-label-hover,
          .next-input-block-label-as-placeholder.next-input-block-label-with-value {
          color: var(--nextui-color-foreground);
          top: -72%;
          left: 4px;
          cursor: inherit;
        }
        .next-input-block-label-as-placeholder.next-input-block-label-is-textarea {
          top: 10px;
        }
        .next-input-block-label-as-placeholder.next-input-block-label-is-textarea.next-input-block-label-hover,
          .next-input-block-label-as-placeholder.next-input-block-label-is-textarea.next-input-block-label-with-value {
          top: -28px;
        }
      </style></label><div class=\\"nextui-input-container nextui-input-container-input\\"><div class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-v89an15r\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" aria-labelledby=\\"nextui-input-label-v89an15r\\" value=\\"\\"></div></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-foreground);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: var(--nextui-color-text);
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-foreground);
            box-shadow: 0 0 0 0px
              var(--nextui-color-foreground);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-3nslr6qo\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"><span class=\\"nextui-input-label nextui-input-label-right\\">label<style>
        .nextui-input-label {
          position: relative;
          display: inline-flex;
          width: initial;
          height: 100%;
          font-weight: 500;
          align-items: center;
          pointer-events: none;
          margin: 0;
          background: ;
          padding: 0 var(--nextui-spacing-sm);
          color: var(--nextui-color-accents-3);
          font-size: .875rem;
          line-height: 1;
        }
        .nextui-input-label-right {
          border-top-right-radius: 12px;
          border-bottom-right-radius: 12px;
        }
        .nextui-input-label-left {
          border-top-left-radius: 12px;
          border-bottom-left-radius: 12px;
        }
        .nextui-input-label-underlined.left:after,
          .nextui-input-label-underlined.right:before {
          position: absolute;
          content: '';
          height: 70%;
          top: 15%;
          bottom: 0;
          width: calc(0px / 2);
          box-shadow: 0 2px 4px 0px rgb(0 0 0 / 8%);
          background: var(--nextui-color-accents-3);
        }
        .nextui-input-label-underlined.nextui-input-label-left:after {
          right: 0;
        }
        .nextui-input-label-underlined.nextui-input-label-right:before {
          left: 0;
        }
        .nextui-input-label-bordered:after, .nextui-input-label-bordered:before {
          display: none;
        }
      </style></span></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-foreground);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: var(--nextui-color-text);
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-foreground);
            box-shadow: 0 0 0 0px
              var(--nextui-color-foreground);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><span class=\\"nextui-input-label nextui-input-label-left\\">label<style>
        .nextui-input-label {
          position: relative;
          display: inline-flex;
          width: initial;
          height: 100%;
          font-weight: 500;
          align-items: center;
          pointer-events: none;
          margin: 0;
          background: ;
          padding: 0 var(--nextui-spacing-sm);
          color: var(--nextui-color-accents-3);
          font-size: .875rem;
          line-height: 1;
        }
        .nextui-input-label-right {
          border-top-right-radius: 12px;
          border-bottom-right-radius: 12px;
        }
        .nextui-input-label-left {
          border-top-left-radius: 12px;
          border-bottom-left-radius: 12px;
        }
        .nextui-input-label-underlined.left:after,
          .nextui-input-label-underlined.right:before {
          position: absolute;
          content: '';
          height: 70%;
          top: 15%;
          bottom: 0;
          width: calc(0px / 2);
          box-shadow: 0 2px 4px 0px rgb(0 0 0 / 8%);
          background: var(--nextui-color-accents-3);
        }
        .nextui-input-label-underlined.nextui-input-label-left:after {
          right: 0;
        }
        .nextui-input-label-underlined.nextui-input-label-right:before {
          left: 0;
        }
        .nextui-input-label-bordered:after, .nextui-input-label-bordered:before {
          display: none;
        }
      </style></span><input type=\\"text\\" id=\\"nextui-input-4j3vn1io\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-foreground);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: var(--nextui-color-text);
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-foreground);
            box-shadow: 0 0 0 0px
              var(--nextui-color-foreground);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div></div>"
`;

exports[`Input should work with different sizes 1`] = `
"<div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-bursi73b\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 7px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 7px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(1.2 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 7px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-foreground);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.2 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: var(--nextui-color-text);
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-foreground);
            box-shadow: 0 0 0 0px
              var(--nextui-color-foreground);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .75rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-nd033kqr\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 9px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 9px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(1.6 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 9px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-foreground);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.6 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: var(--nextui-color-text);
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-foreground);
            box-shadow: 0 0 0 0px
              var(--nextui-color-foreground);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .75rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-328unu6c\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 14px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 14px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2.2 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 14px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-foreground);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2.2 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: var(--nextui-color-text);
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-foreground);
            box-shadow: 0 0 0 0px
              var(--nextui-color-foreground);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: 1rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-h3dtslgk\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 15px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 15px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2.6 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 15px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-foreground);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2.6 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: var(--nextui-color-text);
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-foreground);
            box-shadow: 0 0 0 0px
              var(--nextui-color-foreground);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: 1.25rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-sc7thpkb\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: 50%;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-foreground);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: var(--nextui-color-text);
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-foreground);
            box-shadow: 0 0 0 0px
              var(--nextui-color-foreground);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div></div>"
`;

exports[`Input should work with different status 1`] = `
"<div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-e8r60cu4\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-secondary);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: inherit;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-secondary);
            box-shadow: 0 0 0 0px
              var(--nextui-color-secondary);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-22v5u0of\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-success);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: inherit;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-success);
            box-shadow: 0 0 0 0px
              var(--nextui-color-success);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-mlsqbbv3\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * var(--nextui-spacing-5));
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: var(--nextui-color-accents-2);
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              var(--nextui-color-accents-2);
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: var(--nextui-color-accents-2);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: var(--nextui-color-warning);
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * var(--nextui-spacing-sm) * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: inherit;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: var(--nextui-shadow-sm);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: var(--nextui-color-warning);
            box-shadow: 0 0 0 0px
              var(--nextui-color-warning);
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: var(--nextui-color-accents-4);
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(var(--nextui-spacing-sm) * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: var(--nextui-spacing-xs) var(--nextui-spacing-sm);
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: var(--nextui-color-text);
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: var(--nextui-color-accents-3);
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px var(--nextui-color-background) inset !important;
            -webkit-text-fill-color: var(--nextui-color-text) !important;
          }
        </style></div></div>"
`;
